--- a/app/src/main/res/drawable/titlebar_showline.xml
+++ b/app/src/main/res/drawable/titlebar_showline.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
         android:angle="270"
         android:endColor="@color/transparency"
         android:startColor="#14000000"
         android:type="linear" />
-
+    <!--<gradient
+        android:angle="90"
+        android:endColor="#FFC2C0C0"
+        android:startColor="@android:color/transparent" />-->
 </shape>
