--- a/app/src/main/res/layout/activity_mine_integral.xml
+++ b/app/src/main/res/layout/activity_mine_integral.xml
@@ -36,6 +36,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/text_remain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="10"
@@ -57,6 +58,7 @@
         android:background="@color/color_F5F5F5" />
 
     <com.androidkun.xtablayout.XTabLayout
+        android:id="@+id/xTablayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_33"
         app:xTabIndicatorColor="@color/color_0267FF"
@@ -68,17 +70,18 @@
         app:xTabTextSize="@dimen/sp_13" />
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <LinearLayout
-        android:id="@+id/linear_edittor"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_43"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_invite"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -91,6 +94,7 @@
             android:textSize="@dimen/sp_14" />
 
         <Button
+            android:id="@+id/btn_getintegral"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
