--- a/app/src/main/res/layout/item_answer_list.xml
+++ b/app/src/main/res/layout/item_answer_list.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:paddingBottom="@dimen/dp_12"
     android:paddingEnd="@dimen/dp_12"
     android:paddingStart="@dimen/dp_12"
     android:paddingTop="@dimen/dp_12"
@@ -66,8 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sp_14"
+        android:lineSpacingExtra="@dimen/dp_1"
         android:textColor="@color/color_4A4A4A"
-        android:textSize="@dimen/sp_12"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintTop_toBottomOf="@+id/item_answer_linearlayout"
         tools:text="请问老师，频率为什么是分子，分母发生的次数，比如一 年八次。是1/8吗？" />
 
@@ -105,10 +105,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:paddingBottom="@dimen/dp_3"
-            android:paddingEnd="@dimen/dp_11"
-            android:paddingStart="@dimen/dp_11"
-            android:paddingTop="@dimen/dp_3"
+            android:gravity="center"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingEnd="@dimen/dp_5"
+            android:paddingStart="@dimen/dp_5"
+            android:paddingTop="@dimen/dp_1"
             android:text="@string/answer_checkdetail"
             android:textColor="@color/color_0267FF"
             android:textSize="@dimen/sp_12"
