--- a/app/src/main/res/layout/activity_cours_answer_detail.xml
+++ b/app/src/main/res/layout/activity_cours_answer_detail.xml
@@ -145,10 +145,11 @@ We're beautiful now" />
                         android:layout_marginBottom="@dimen/dp_15"
                         android:layout_marginStart="@dimen/dp_12"
                         android:layout_marginTop="@dimen/dp_12"
-                        android:paddingBottom="@dimen/dp_5"
-                        android:paddingEnd="@dimen/dp_30"
-                        android:paddingStart="@dimen/dp_30"
-                        android:paddingTop="@dimen/dp_5"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/dp_1"
+                        android:paddingEnd="@dimen/dp_5"
+                        android:paddingStart="@dimen/dp_5"
+                        android:paddingTop="@dimen/dp_1"
                         android:textColor="@color/color_0267FF"
                         android:textSize="@dimen/sp_12"
                         app:layout_constraintStart_toStartOf="parent"
