--- a/app/src/main/res/layout/activity_course_list.xml
+++ b/app/src/main/res/layout/activity_course_list.xml
@@ -40,8 +40,8 @@
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never" />
-
+                android:overScrollMode="never"
+                android:paddingTop="@dimen/dp_10" />
         </LinearLayout>
 
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
