--- a/app/src/main/res/layout/dialog_teacher_detail.xml
+++ b/app/src/main/res/layout/dialog_teacher_detail.xml
@@ -68,7 +68,7 @@
             android:gravity="center"
             android:paddingEnd="@dimen/dp_20"
             android:paddingStart="@dimen/dp_20"
-            android:textColor="@android:color/white"
+            android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_12"
             tools:text="优财金牌讲师" />
 
@@ -84,8 +84,6 @@
                         北美会计师、税务和财务实务服务专业人士CMA案例教学专家、
                         CMA研究院院长北美会计师、
                         税务和财务实务服务专业人士CMA案例教学专家" />
-
-
     </com.flyco.roundview.RoundLinearLayout>
 
 
