--- a/app/src/main/res/layout/item_addlearnplan_course.xml
+++ b/app/src/main/res/layout/item_addlearnplan_course.xml
@@ -35,7 +35,7 @@
         android:layout_width="@dimen/dp_96"
         android:layout_height="@dimen/dp_58"
         android:scaleType="fitCenter"
-        android:src="@mipmap/banner_default"
+        android:src="@mipmap/icon_default"
         android:visibility="gone" />
 
 </LinearLayout>
