--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -10,7 +10,7 @@
         android:id="@+id/item_live_image"
         android:layout_width="@dimen/dp_154"
         android:layout_height="@dimen/dp_77"
-        android:src="@mipmap/banner_default"
+        android:src="@mipmap/icon_default"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
