--- a/app/src/main/res/layout/item_home_news.xml
+++ b/app/src/main/res/layout/item_home_news.xml
@@ -17,7 +17,7 @@
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_60"
         android:scaleType="fitXY"
-        android:src="@mipmap/banner_default" />
+        android:src="@mipmap/icon_default" />
 
     <LinearLayout
         android:layout_width="0dp"
