--- a/app/src/main/res/layout/item_imageselectr.xml
+++ b/app/src/main/res/layout/item_imageselectr.xml
@@ -13,7 +13,7 @@
         android:layout_height="@dimen/dp_65"
         android:layout_centerInParent="true"
         android:scaleType="centerInside"
-        android:src="@mipmap/banner_default" />
+        android:src="@mipmap/icon_default" />
 
     <ImageView
         android:id="@+id/iv_delete"
