--- a/app/src/main/res/layout/item_mine_orderformlist.xml
+++ b/app/src/main/res/layout/item_mine_orderformlist.xml
@@ -66,7 +66,7 @@
             android:layout_width="@dimen/dp_96"
             android:layout_height="@dimen/dp_58"
             android:scaleType="centerCrop"
-            android:src="@mipmap/banner_default"
+            android:src="@mipmap/icon_default"
             app:corner_radius="@dimen/dp_4" />
 
         <LinearLayout
