--- a/app/src/main/res/layout/item_minecourse.xml
+++ b/app/src/main/res/layout/item_minecourse.xml
@@ -18,7 +18,7 @@
         android:layout_width="@dimen/dp_96"
         android:layout_height="@dimen/dp_58"
         android:scaleType="fitXY"
-        android:src="@mipmap/banner_default" />
+        android:src="@mipmap/icon_default" />
 
     <LinearLayout
         android:layout_width="match_parent"
