--- a/app/src/main/res/layout/activity_mine_integral.xml
+++ b/app/src/main/res/layout/activity_mine_integral.xml
@@ -69,10 +69,17 @@
         app:xTabTextColor="@color/color_333333"
         app:xTabTextSize="@dimen/sp_13" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:layout_marginEnd="@dimen/dp_12"
+        android:layout_marginStart="@dimen/dp_12"
+        android:background="@color/color_F5F5F5" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
     <LinearLayout
