--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,7 +18,7 @@
     </declare-styleable>
     <!--TODO 宏洋大哥的流式布局-->
     <declare-styleable name="TagFlowLayout">
-        <attr name="max_select" format="integer"></attr>
+        <attr name="max_select" format="integer" />
         <attr name="gravity">
             <enum name="left" value="-1" />
             <enum name="center" value="0" />
