App支付抽离,添加赚取积分业务

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
                     android:layout_height="@dimen/dp_125"
                     android:layout_gravity="center_horizontal"
                     android:background="@color/colorWhite"
-                    android:clipChildren="false"
+                    android:clipChildren="true"
                     app:banner_default_image="@mipmap/icon_bannerdefault"
                     app:banner_layout="@layout/banner_index"
                     app:image_scale_type="center_crop"
