--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -11,141 +11,155 @@
 
     <include layout="@layout/titlebar_toolbar" />
 
-    <LinearLayout
+    <com.ucfo.youcaiwx.widget.customview.LoadingLayout
+        android:id="@+id/loadinglayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="@dimen/dp_14">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/icon_payorder" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_2"
-            android:text="@string/pay_commitOrderSuccess"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_17" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pay_commitOrderSuccess2"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:paddingEnd="@dimen/dp_12"
-        android:paddingStart="@dimen/dp_12"
-        android:paddingTop="@dimen/dp_12">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pay_orderFormNumber"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:id="@+id/text_ordernum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_12" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/dp_12"
-        android:paddingEnd="@dimen/dp_12"
-        android:paddingStart="@dimen/dp_12"
-        android:paddingTop="@dimen/dp_4">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pay_orderFormPrice"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
-
-        <TextView
-            android:id="@+id/text_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_5"
-        android:layout_marginStart="@dimen/dp_12"
-        android:layout_marginTop="@dimen/dp_14"
-        android:text="@string/pay_checkPayMode"
-        android:textColor="@color/color_666666"
-        android:textSize="@dimen/sp_12" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/btn_WechatPay"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_53"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:drawableEnd="@mipmap/icon_right_in"
-            android:drawablePadding="@dimen/dp_5"
-            android:drawableStart="@drawable/ic_icon_wechatpay"
-            android:gravity="center_vertical"
-            android:paddingEnd="@dimen/dp_10"
-            android:paddingStart="@dimen/dp_10"
-            android:text="@string/pay_WeChatPay"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:layout_marginEnd="@dimen/dp_12"
-            android:layout_marginStart="@dimen/dp_12"
-            android:background="@color/color_E6E6E6" />
 
-        <TextView
-            android:id="@+id/pay_Alipay"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_53"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:drawableEnd="@mipmap/icon_right_in"
-            android:drawablePadding="@dimen/dp_5"
-            android:drawableStart="@drawable/ic_icon_alipay"
-            android:gravity="center_vertical"
-            android:paddingEnd="@dimen/dp_10"
-            android:paddingStart="@dimen/dp_10"
-            android:text="@string/pay_Alipay"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="@dimen/dp_14">
 
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_payorder" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_2"
+                    android:text="@string/pay_commitOrderSuccess"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_17" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pay_commitOrderSuccess2"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@android:color/white"
+                android:orientation="horizontal"
+                android:paddingEnd="@dimen/dp_12"
+                android:paddingStart="@dimen/dp_12"
+                android:paddingTop="@dimen/dp_12">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pay_orderFormNumber"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12" />
+
+                <TextView
+                    android:id="@+id/text_ordernum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dp_12"
+                android:paddingEnd="@dimen/dp_12"
+                android:paddingStart="@dimen/dp_12"
+                android:paddingTop="@dimen/dp_4">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pay_orderFormPrice"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+
+                <TextView
+                    android:id="@+id/text_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_5"
+                android:layout_marginStart="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_14"
+                android:text="@string/pay_checkPayMode"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_12" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/btn_WechatPay"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_53"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:drawableEnd="@mipmap/icon_right_in"
+                    android:drawablePadding="@dimen/dp_5"
+                    android:drawableStart="@drawable/ic_icon_wechatpay"
+                    android:gravity="center_vertical"
+                    android:paddingEnd="@dimen/dp_10"
+                    android:paddingStart="@dimen/dp_10"
+                    android:text="@string/pay_WeChatPay"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginEnd="@dimen/dp_12"
+                    android:layout_marginStart="@dimen/dp_12"
+                    android:background="@color/color_E6E6E6" />
+
+                <TextView
+                    android:id="@+id/pay_Alipay"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_53"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:drawableEnd="@mipmap/icon_right_in"
+                    android:drawablePadding="@dimen/dp_5"
+                    android:drawableStart="@drawable/ic_icon_alipay"
+                    android:gravity="center_vertical"
+                    android:paddingEnd="@dimen/dp_10"
+                    android:paddingStart="@dimen/dp_10"
+                    android:text="@string/pay_Alipay"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 </LinearLayout>
