--- a/app/src/main/res/layout/titlebar_toolbar.xml
+++ b/app/src/main/res/layout/titlebar_toolbar.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_41"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        app:contentInsetEnd="@dimen/dp_35"
+        app:contentInsetStart="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +31,6 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:paddingEnd="@dimen/dp_25"
             android:text="@string/default_title"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16" />
