--- a/app/src/main/res/layout/activity_earn_integral.xml
+++ b/app/src/main/res/layout/activity_earn_integral.xml
@@ -29,13 +29,21 @@
                 android:paddingTop="@dimen/dp_14"
                 android:text="@string/integral_daily"
                 android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_14" />
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_0_5"
+                android:layout_marginEnd="@dimen/dp_12"
+                android:layout_marginStart="@dimen/dp_12"
+                android:background="@color/color_E6E6E6" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_day"
-                style="@style/PaddingStartEnd12"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:overScrollMode="never" />
 
             <View
                 android:layout_width="match_parent"
@@ -50,13 +58,21 @@
                 android:paddingTop="@dimen/dp_14"
                 android:text="@string/integral_novice"
                 android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_14" />
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_marginEnd="@dimen/dp_12"
+                android:layout_marginStart="@dimen/dp_12"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_0_5"
+                android:background="@color/color_E6E6E6" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_new"
-                style="@style/PaddingStartEnd12"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:overScrollMode="never" />
 
         </LinearLayout>
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
