--- a/app/src/main/res/layout/item_integral_goods.xml
+++ b/app/src/main/res/layout/item_integral_goods.xml
@@ -2,9 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/dp_7"
+    android:paddingTop="@dimen/dp_7">
 
     <ImageView
         android:id="@+id/item_goods_iamge"
