--- a/app/src/main/res/layout/activity_commodity_exchange.xml
+++ b/app/src/main/res/layout/activity_commodity_exchange.xml
@@ -40,7 +40,7 @@
                     <ImageView
                         android:id="@+id/image_product"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/dp_74"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="@dimen/dp_14" />
 
