--- a/app/src/main/res/layout/activity_integral_commit.xml
+++ b/app/src/main/res/layout/activity_integral_commit.xml
@@ -4,19 +4,284 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context=".module.integral.IntegralCommitActivity">
+    android:background="@color/colorWhite"
+    android:orientation="vertical"
+    tools:context="com.ucfo.youcaiwx.module.pay.CommitOrderActivity"
+    tools:ignore="RtlCompat">
 
-    <!--积分支付-->
-    <Button
-        android:id="@+id/btn_next"
-        style="?android:attr/borderlessButtonStyle"
+    <include layout="@layout/titlebar_toolbar" />
+
+    <com.ucfo.youcaiwx.widget.customview.LoadingLayout
+        android:id="@+id/loadinglayout"
         android:layout_width="match_parent"
-        android:background="@mipmap/icon_btnbackprimary"
-        android:layout_height="@dimen/dp_43"
-        android:stateListAnimator="@drawable/shape_selector_elevation"
-        android:textColor="@color/colorWhite"
-        android:text="@string/integral_pay"
-        android:textSize="@dimen/sp_14" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:overScrollMode="never">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:orientation="vertical">
+                    <!--收货地址选择-->
+                    <LinearLayout
+                        android:id="@+id/btn_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_80"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingEnd="@dimen/dp_12"
+                        android:paddingStart="@dimen/dp_12">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@mipmap/icon_address" />
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/dp_12"
+                            android:layout_marginStart="@dimen/dp_12"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/text_addAddress"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="添加收货地址"
+                                android:textColor="@color/color_333333"
+                                android:textSize="@dimen/sp_13"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toTopOf="@id/address_content"
+                                app:layout_constraintTop_toTopOf="parent">
+
+                                <TextView
+                                    android:id="@+id/address_name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/color_333333"
+                                    android:textSize="@dimen/sp_13"
+                                    tools:text="菜菜" />
+
+                                <TextView
+                                    android:id="@+id/address_phone"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="@dimen/dp_5"
+                                    android:textColor="@color/color_999999"
+                                    android:textSize="@dimen/sp_12"
+                                    tools:text="13112345688" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/address_content"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/dp_4"
+                                android:ellipsize="end"
+                                android:maxLines="2"
+                                android:textColor="@color/color_666666"
+                                android:textSize="@dimen/sp_12"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                tools:text="北京市昌平区富家路太平家园26号楼3单元101" />
+                        </android.support.constraint.ConstraintLayout>
+
+                        <ImageView
+                            android:layout_width="@dimen/dp_16"
+                            android:layout_height="@dimen/dp_16"
+                            android:src="@drawable/ic_right_in" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_10"
+                        android:background="@color/color_F5F5F5" />
+                    <!--商品信息-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/dp_14"
+                        android:paddingEnd="@dimen/dp_12"
+                        android:paddingStart="@dimen/dp_12"
+                        android:paddingTop="@dimen/dp_14">
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/course_image"
+                                android:layout_width="@dimen/dp_96"
+                                android:layout_height="@dimen/dp_58"
+                                android:layout_centerInParent="true" />
+
+                            <LinearLayout
+                                android:id="@+id/linear_coupon"
+                                android:layout_width="@dimen/dp_96"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:layout_gravity="center_vertical"
+                                android:gravity="bottom|center"
+                                android:orientation="horizontal"
+                                android:visibility="invisible">
+
+                                <TextView
+                                    android:id="@+id/text_rmb"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/RMB"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="@dimen/sp_12"
+                                    android:visibility="gone" />
+
+                                <TextView
+                                    android:id="@+id/item_coupons_money"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="@dimen/sp_28"
+                                    tools:text="150" />
+
+                                <TextView
+                                    android:id="@+id/text_discount"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/coupon_discount"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="@dimen/sp_11"
+                                    android:visibility="gone" />
+                            </LinearLayout>
+
+                        </RelativeLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/dp_12"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/course_title"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/color_333333"
+                                android:textSize="@dimen/sp_14"
+                                android:textStyle="bold"
+                                tools:text="CMA中文高清网课全科（新纲）" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_10"
+                        android:background="@color/color_F5F5F5" />
+                    <!--最终支付金额-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/dp_15"
+                        android:paddingEnd="@dimen/dp_12"
+                        android:paddingStart="@dimen/dp_12"
+                        android:paddingTop="@dimen/dp_15">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/pay_finalPay"
+                            android:textColor="@color/color_333333"
+                            android:textSize="@dimen/sp_14" />
+
+                        <TextView
+                            android:id="@+id/text_finalprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/color_F99111"
+                            android:textSize="@dimen/sp_19"
+                            tools:text="2000积分" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_10"
+                        android:background="@color/color_F5F5F5" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_43"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingEnd="@dimen/dp_12"
+                        android:paddingStart="@dimen/dp_12">
+
+                        <CheckBox
+                            android:id="@+id/checkbox"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:button="@drawable/radio_button_style_knowledge"
+                            android:checked="true"
+                            android:paddingEnd="@dimen/dp_6"
+                            android:paddingStart="@dimen/dp_6"
+                            android:text="@string/pay_havereaded"
+                            android:textColor="@color/color_999999"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:id="@+id/btn_paynotice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/pay_notice"
+                            android:textColor="@color/color_0267FF"
+                            android:textSize="@dimen/sp_14" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
+
+            <Button
+                android:id="@+id/btn_next"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_43"
+                android:background="@mipmap/icon_btnbackprimary"
+                android:gravity="center"
+                android:stateListAnimator="@drawable/shape_selector_elevation"
+                android:text="@string/integral_pay"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp_14" />
+        </LinearLayout>
+
+    </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 
 </LinearLayout>
