--- a/app/src/main/res/layout/fragment_integral_exchange.xml
+++ b/app/src/main/res/layout/fragment_integral_exchange.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/refreshlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     app:srlEnableNestedScrolling="true">
 
     <com.ucfo.youcaiwx.widget.customview.LoadingLayout
@@ -10,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:overScrollMode="never" />
 
-        </LinearLayout>
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
