--- a/app/src/main/res/layout/item_integral_detail.xml
+++ b/app/src/main/res/layout/item_integral_detail.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:paddingBottom="@dimen/dp_15"
-    android:paddingEnd="@dimen/dp_12"
-    android:paddingStart="@dimen/dp_12"
     android:paddingTop="@dimen/dp_15">
 
     <TextView
@@ -35,7 +35,6 @@
         android:id="@+id/item_detail_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/color_E84342"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
