--- a/app/src/main/res/layout/fragment_questionbank.xml
+++ b/app/src/main/res/layout/fragment_questionbank.xml
@@ -23,9 +23,14 @@
         android:background="@color/demo_light_transparent"
         android:elevation="@dimen/dp_20" />
     <!--主题内容-->
-    <android.support.v4.widget.NestedScrollView
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:srlEnableLoadMore="false"
+        app:srlEnableNestedScrolling="true"
+        app:srlEnableOverScrollBounce="true"
+        app:srlEnableOverScrollDrag="true"
+        app:srlEnableRefresh="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -272,7 +277,7 @@
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
 </LinearLayout>
